# SDG-Classification-Using-Instruction-Tuned-LLMs

./: README.md  pyproject.toml
data/: extraction_test.csv  extraction_train.csv  z_test.csv  z_train.csv  zo_up.csv
data/prompts/: SDG_Description.txt
notebooks/: check_extraction_adapters.ipynb  prompt_generator.ipynb
src/: DSRE.py  config.py  inference_llama.py  inference_zephyr.py  train_DSRE_extraction.py  train_llama.py  train_zephyr.py
