[tool.poetry]
name = "SDG Classification Using Instruction-Tuned LLMs"
version = "0.1.0"
description = ""
authors = ["Tobias Fankhauser <tobias.fankhauser@uzh.ch>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
jupyter = "^1.0.0"
accelerate = {git = "https://github.com/huggingface/accelerate.git"}
bitsandbytes = "^0.41.1"
datasets = "^2.14.4"
transformers = {git = "https://github.com/huggingface/transformers.git"}
peft = {git = "https://github.com/huggingface/peft.git"}
trl = {git = "https://github.com/lvwerra/trl.git"}
scipy = "^1.11.2"
scikit-learn = "^1.3.0"
wandb = "^0.15.10"
matplotlib = "^3.8.0"
seaborn = "^0.13.1"
torchmetrics = "^1.1.2"
fire = "^0.5.0"
openai = "^0.28.1"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
numpy = "^1.26.0"
plotly = "^5.17.0"
gpustat = "^1.1.1"
dask = "^2023.10.0"
fuzzywuzzy = "^0.18.0"
python-levenshtein = "^0.23.0"
sentence-transformers = "^2.2.2"
pandas = "^2.1.2"
outlines = "^0.0.9"
flask = "^3.0.0"
psutil = "^5.9.6"
einops = "^0.7.0"
krippendorff = "^0.6.1"
openpyxl = "^3.1.2"
pingouin = "^0.5.4"
ta = "^0.11.0"
lmql = {extras = ["hf"], version = "^0.7.3"}
langchain = "^0.1.3"
mlflow = "^2.10.2"
polars = "^0.20.10"
tqdm = "^4.66.2"
torch = "^2.2.2"
torchvision = "^0.17.2"
torchaudio = "^2.2.2"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu122"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
